--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://adarshkumar370.github.io/vgl-electronics",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
